k8s/apps/repo-post/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-post
  namespace: apps
  labels:
    app: repo-post
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: repo-post
  template:
    metadata:
      labels:
        app: repo-post
    spec:
      imagePullSecrets:
        - name: pull-secret
      containers:
        - name: repo-post
          image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-02/repo-post:91e0ba19a76ee08810f8325f23ff0e7080d3d409 # TODO: use explicit tag
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
