k8s/apps/repo-post/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: repo-post
  namespace: apps
  labels:
    app: repo-post
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: repo-post
                port:
                  number: 8080
